feat(backend): auditoria de DESCARGAS + permiso de lectura/visibilidad por punto (CU-36/37)
generarDescarga audita la accion DESCARGA (antes todo era LECTURA): nuevo GET /documentos/{id}/descarga y la resolucion del cliente ahora registra DESCARGA.

CU-36 dimension de lectura: para funcionarios, SOLO_EDICION bloquea preview/descarga y tiposDocumentoVisibles filtra listados y acceso individual. El filtro por tipo solo restringe tipos del CATALOGO (PDF/IMAGEN/WORD/EXCEL/AUDIO/VIDEO/OTRO): el texto libre del movil (nombre del requisito) pasa siempre, para no ocultar al funcionario lo que sube el cliente. Admins y clientes no se restringen.

Seeder de permisos: sin restriccion de tipos por defecto (lista vacia); sembrar la lista poblada activaba el filtro en toda la demo.